objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Days_from_Implant_to_Explant__c</fullName>
        <formula>Explant_Date__c - InstallDate</formula>
        <label>Days from Implant to Explant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Explant_Date__c</fullName>
        <description>Date the Asset was explanted. In case the Asset goes through a change out process, the field is auto-updated with the implant date value of the replacing Asset.</description>
        <label>Explant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsICDorPacemakerorLoopRecorder__c</fullName>
        <description>SAFBIO-1492</description>
        <formula>OR(Text(product_type__c)=&apos;ICD&apos;,Text(product_type__c)=&apos;Loop Recorder&apos;,Text(product_type__c)=&apos;Pacemaker&apos;, Text(product_type__c)=&apos;CRT-D&apos;, Text(product_type__c)=&apos;CRT-P&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsICDorPacemakerorLoopRecorder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Tip_Location__c</fullName>
        <label>Lead Tip Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RV_APEX</fullName>
                    <label>RV, Apex</label>
                </value>
                <value>
                    <fullName>RV_SEPTUM</fullName>
                    <label>RV, Septum</label>
                </value>
                <value>
                    <fullName>RV_HIS</fullName>
                    <label>RV, HISbundle</label>
                </value>
                <value>
                    <fullName>RV_OT</fullName>
                    <label>RV, OutflowTract</label>
                </value>
                <value>
                    <fullName>RV_ANT</fullName>
                    <label>RV, Anterior</label>
                </value>
                <value>
                    <fullName>RV_LAT</fullName>
                    <label>RV, Lateral</label>
                </value>
                <value>
                    <fullName>RV_EPICARD</fullName>
                    <label>RV, Epicardial</label>
                </value>
                <value>
                    <fullName>RV_ANY</fullName>
                    <label>RV / No details</label>
                </value>
                <value>
                    <fullName>RA_ANT</fullName>
                    <label>RA, Anterior</label>
                </value>
                <value>
                    <fullName>RA_FWALL</fullName>
                    <label>RA, FreeWall</label>
                </value>
                <value>
                    <fullName>RA_SEPTUM</fullName>
                    <label>RA, Septum</label>
                </value>
                <value>
                    <fullName>RA_ANY</fullName>
                    <label>RA / No details</label>
                </value>
                <value>
                    <fullName>RA_HIS</fullName>
                    <label>RA, HISbundle</label>
                </value>
                <value>
                    <fullName>LV_APEX</fullName>
                    <label>LV, Apex</label>
                </value>
                <value>
                    <fullName>LV_LAT</fullName>
                    <label>LV, Lateral</label>
                </value>
                <value>
                    <fullName>LV_POST</fullName>
                    <label>LV, Posterior</label>
                </value>
                <value>
                    <fullName>LV_SEPTUM</fullName>
                    <label>LV, Septum</label>
                </value>
                <value>
                    <fullName>LV_EPICARD</fullName>
                    <label>LV, Epicardial</label>
                </value>
                <value>
                    <fullName>LV_ANY</fullName>
                    <label>LV / No details</label>
                </value>
                <value>
                    <fullName>CS_POST</fullName>
                    <label>Coronary Sinus, Posterior</label>
                </value>
                <value>
                    <fullName>CS_POST_LAT</fullName>
                    <label>Coronary Sinus, Posterior, Lateral</label>
                </value>
                <value>
                    <fullName>CS_LAT</fullName>
                    <label>Coronary Sinus, Lateral</label>
                </value>
                <value>
                    <fullName>CS_ANT</fullName>
                    <label>Coronary Sinus, Anterior</label>
                </value>
                <value>
                    <fullName>CS_ANT_LAT</fullName>
                    <label>Coronary Sinus, Anterior, Lateral</label>
                </value>
                <value>
                    <fullName>CS_ANY</fullName>
                    <label>Coronary Sinus / No details</label>
                </value>
                <value>
                    <fullName>CV_GREAT</fullName>
                    <label>Cardiac Vein, Great</label>
                </value>
                <value>
                    <fullName>CV_MID</fullName>
                    <label>Cardiac Vein, Middle</label>
                </value>
                <value>
                    <fullName>CV_POST</fullName>
                    <label>Cardiac Vein, Posterior</label>
                </value>
                <value>
                    <fullName>CV_POST_LAT</fullName>
                    <label>Cardiac Vein, Posterior, Lateral</label>
                </value>
                <value>
                    <fullName>CV_LAT</fullName>
                    <label>Cardiac Vein, Lateral</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OOS_Reason__c</fullName>
        <description>Reason device or lead was taken out of service (picklist)</description>
        <label>DELETE Event Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diaphragmatic Stimulation</fullName>
                </value>
                <value>
                    <fullName>ERI</fullName>
                </value>
                <value>
                    <fullName>Exposed to bodily fluids</fullName>
                </value>
                <value>
                    <fullName>Infection</fullName>
                </value>
                <value>
                    <fullName>Interm. Loss of Capture</fullName>
                </value>
                <value>
                    <fullName>Interm. Output</fullName>
                </value>
                <value>
                    <fullName>Interm. Oversensing</fullName>
                </value>
                <value>
                    <fullName>Interm. Undersensing</fullName>
                </value>
                <value>
                    <fullName>No Output</fullName>
                </value>
                <value>
                    <fullName>No Shock/Therapy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Total Loss of Capture</fullName>
                </value>
                <value>
                    <fullName>Total Loss of Sensing</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Dislodgement</fullName>
                </value>
                <value>
                    <fullName>Erosion</fullName>
                </value>
                <value>
                    <fullName>Error Message</fullName>
                </value>
                <value>
                    <fullName>Landline Issue</fullName>
                </value>
                <value>
                    <fullName>Lead Reposition</fullName>
                </value>
                <value>
                    <fullName>Patient Anatomy</fullName>
                </value>
                <value>
                    <fullName>Patient Death</fullName>
                </value>
                <value>
                    <fullName>Pocket Revision</fullName>
                </value>
                <value>
                    <fullName>Power Issue</fullName>
                </value>
                <value>
                    <fullName>Printer</fullName>
                </value>
                <value>
                    <fullName>Screen Freeze</fullName>
                </value>
                <value>
                    <fullName>Start Up</fullName>
                </value>
                <value>
                    <fullName>Storm Damage</fullName>
                </value>
                <value>
                    <fullName>Telephone Complaint</fullName>
                </value>
                <value>
                    <fullName>Unable to Transmit</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Disposition__c</fullName>
        <description>Used in CAN integration.</description>
        <label>Product Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pulse_width_ms_rv__c</fullName>
        <label>Pulse width (ms) RV</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Account_No__c</fullName>
        <formula>Account.sap_no__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Account No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tachy_Channel__c</fullName>
        <label>Tachy Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>RV</fullName>
                </value>
                <value>
                    <fullName>SVC</fullName>
                </value>
                <value>
                    <fullName>RV+SVC</fullName>
                </value>
                <value>
                    <fullName>RV+SVC -&gt; can</fullName>
                    <isActive>false</isActive>
                    <label>RV+SVC -&gt; can</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <description>Programming parameter field for Lead, example value is 0.60</description>
        <label>Threshold</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UDI__c</fullName>
        <description>Unique Device Identification made up of serial/batch number, UBD, and EAN. Required by FDA</description>
        <label>UDI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>authorized_for_shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only CM Assets will be viewable or searchable within this process. 
If requesting a direct ship, the user will only be allowed to select from CM models that are authorized for shipping by the business.
Search for product identifier is nationwide.  Search starts with stock locations to which the user has Access.</description>
        <label>Authorized for Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>av_delay_pace__c</fullName>
        <description>Programming parameter field for Device, example value is 150</description>
        <label>AV Delay Pace</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>batch_no__c</fullName>
        <description>Unique alphanumeric identifier of a lot of products</description>
        <label>Batch No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>biosmart_id__c</fullName>
        <externalId>true</externalId>
        <label>BIOSMART ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>brady_channel__c</fullName>
        <label>Brady Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>RA</fullName>
                </value>
                <value>
                    <fullName>RA+RV</fullName>
                </value>
                <value>
                    <fullName>RV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>charge_time__c</fullName>
        <description>Programming parameter field for ICD, default value is 0.0</description>
        <label>Charge Time</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cm_active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is marked if an asset is changed out during a procedure. Checkbox on Device record, if CM was activated.</description>
        <label>CM active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>competitor_manufacturers__c</fullName>
        <description>SAFBIO-2284 used for Competitor assets in the Add Product Flows</description>
        <label>Competitor Manufacturers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5500_APC</fullName>
                    <label>AMERICAN PACEMAKER CORP.</label>
                </value>
                <value>
                    <fullName>5500_ACO</fullName>
                    <label>ANGEION CORP.</label>
                </value>
                <value>
                    <fullName>5500_BME</fullName>
                    <label>BIOMEC</label>
                </value>
                <value>
                    <fullName>5500_BSX</fullName>
                    <label>BOSTON SCIENTIFIC</label>
                </value>
                <value>
                    <fullName>5500_CAC</fullName>
                    <label>CARDIAC CONTROL</label>
                </value>
                <value>
                    <fullName>5500_CAI</fullName>
                    <label>CARDIAC IMPULSE</label>
                </value>
                <value>
                    <fullName>5500_CAP</fullName>
                    <label>CARDIAC PACEMAKER</label>
                </value>
                <value>
                    <fullName>5500_CPR</fullName>
                    <label>CARDIAC PRODUCTS</label>
                </value>
                <value>
                    <fullName>5500_CPM</fullName>
                    <label>CARDIO-PACE MEDICAL</label>
                </value>
                <value>
                    <fullName>5500_CHR</fullName>
                    <label>CHRONIC</label>
                </value>
                <value>
                    <fullName>5500_COK</fullName>
                    <label>COOK</label>
                </value>
                <value>
                    <fullName>5500_COI</fullName>
                    <label>CORATOMIC INC.</label>
                </value>
                <value>
                    <fullName>5500_COR</fullName>
                    <label>CORDIS</label>
                </value>
                <value>
                    <fullName>5500_DAI</fullName>
                    <label>DAIG CORP.</label>
                </value>
                <value>
                    <fullName>5500_ES</fullName>
                    <label>EA</label>
                </value>
                <value>
                    <fullName>5500_ELM</fullName>
                    <label>ELA MEDICAL</label>
                </value>
                <value>
                    <fullName>5500_ELS</fullName>
                    <label>ELS</label>
                </value>
                <value>
                    <fullName>5500_ENP</fullName>
                    <label>ENPATH MEDICAL INC.</label>
                </value>
                <value>
                    <fullName>5500_GRE</fullName>
                    <label>GREATBATCH</label>
                </value>
                <value>
                    <fullName>5500_GDT</fullName>
                    <label>GUIDANT</label>
                </value>
                <value>
                    <fullName>5500_IMP</fullName>
                    <label>IMPLANTRONIK</label>
                </value>
                <value>
                    <fullName>5500_INA</fullName>
                    <label>INHO A</label>
                </value>
                <value>
                    <fullName>5500_INH</fullName>
                    <label>INHOUEE</label>
                </value>
                <value>
                    <fullName>5500_INN</fullName>
                    <label>INHOUSEN</label>
                </value>
                <value>
                    <fullName>5500_INO</fullName>
                    <label>INNOMEDICA LTD.</label>
                </value>
                <value>
                    <fullName>5500_INT</fullName>
                    <label>INTERMEDICS INC.</label>
                </value>
                <value>
                    <fullName>5500_MDO</fullName>
                    <label>MEDICO</label>
                </value>
                <value>
                    <fullName>5500_MDT</fullName>
                    <label>MEDTRONIC, INC</label>
                </value>
                <value>
                    <fullName>5500_MYO</fullName>
                    <label>MYOPORE</label>
                </value>
                <value>
                    <fullName>5500_OSC</fullName>
                    <label>OSCOR MEDICAL CORPORATION</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>competitor_product_type__c</fullName>
        <description>This field is needed to define possible values for competitor product types, so that they are available in Add Product flow. Is a messy workaround, but more elegant than to hardcode these into the flow. Administrators can then configure available types without changing 2 flows (FSL and screen).
The contents of this field is of utterly no consequence.</description>
        <label>Competitor Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pacemaker</fullName>
                </value>
                <value>
                    <fullName>ICD</fullName>
                </value>
                <value>
                    <fullName>CRT-P</fullName>
                </value>
                <value>
                    <fullName>CRT-D</fullName>
                </value>
                <value>
                    <fullName>Loop Recorder</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>contact_label__c</fullName>
        <description>SAFBIO-2137 used in New Implant Procedure Flow to query for contact label</description>
        <formula>Contact.enhanced_label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_recordtypeid__c</fullName>
        <description>SAFBIO-2137 used in New Implant Procedure Flow to query for contact patient recordtype</description>
        <formula>CASESAFEID(Contact.RecordTypeId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact RecordTypeId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_status__c</fullName>
        <description>SAFBIO-2137 used in New Implant Procedure Flow to query for contact status</description>
        <formula>TEXT(Contact.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>current_calendar_year__c</fullName>
        <description>Used in reporting.</description>
        <formula>IF( 
YEAR(InstallDate) = YEAR(TODAY()),
True, 
False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Calendar Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>date_asset_status_changed__c</fullName>
        <description>Used in OOS validation rules.  Updated via process builder when Asset &apos;Status&apos;  is changed.</description>
        <label>Date Asset Status Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_of_manufacture__c</fullName>
        <description>Date the product was manufactured</description>
        <label>Date of Manufacture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>days_from_purchase_to_implant__c</fullName>
        <formula>InstallDate - PurchaseDate</formula>
        <inlineHelpText>Shows the number of days from the Purchase Date to the Implant Date.</inlineHelpText>
        <label>Days from Purchase to Implant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>defib__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Defib</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dft__c</fullName>
        <description>Programming parameter field for Lead, example value is 0.0</description>
        <label>DFT</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enhanced_label__c</fullName>
        <formula>&apos;Model Name:&apos; &amp; IF(ISBLANK(Product2Id),Name,Product2.Name) &amp;&apos;, SN: &apos; &amp; SerialNumber &amp; &apos;, Implanted: &apos; &amp;  TEXT(InstallDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enhanced Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>event_reason__c</fullName>
        <label>Event Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>event_reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>expiration_date_ubd__c</fullName>
        <description>use by date. If the MDRF user selects (by scanning or manual entry) Asset that is past its Use by Date (UBD), the system will send a warning to the screen which the user must acknowledge.  It does not prevent the MDRF entry process from continuing with UBD asset (the product may already have been implanted at the time the MDRF is being completed).</description>
        <label>Expiration date (UBD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>expired_ubd_acknowledged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user has to acknowledge that he knows, that the UBD is in the past the moment he edits/created the record</description>
        <label>Expired UBD acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>explant_date_unknown__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Explant Date Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>explanting_facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location of the explant</description>
        <label>Explanting Facility</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>Account.status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>x5500_us_account</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Other_Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>explanting_physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Explanting Physician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Explanted_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>has_attached_oos_complaints__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A trigger checks, if the asset has already an attached OOS complaint.</description>
        <label>Has attached OOS complaints</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hmsc_registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAFBIO-652</description>
        <label>HMSC Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>impedance__c</fullName>
        <description>Programming parameter field for Lead, example value is 585</description>
        <label>Impedance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>implant_explant_difference1__c</fullName>
        <formula>( Explant_Date__c - order__r.implant_date__c ) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implant Explant Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>implanting_physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implanting Physician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets (Implanting Physician)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>imported_as_oos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Imported as OOS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>include_return_label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger to SAP to include a return label</description>
        <label>Include Return Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>last_180_days__c</fullName>
        <description>Used in reporting.</description>
        <formula>IF(
AND(
InstallDate &lt; TODAY(), 
InstallDate &gt;= (TODAY()-180)),
True, 
False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 180 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>last_30_days__c</fullName>
        <description>Used in reporting.</description>
        <formula>IF(
AND(
InstallDate &lt; TODAY(), 
InstallDate &gt;= (TODAY()-30)),
True, 
False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 30 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>last_365_days__c</fullName>
        <description>Used in reporting.</description>
        <formula>IF(
AND(
InstallDate &lt; TODAY(), 
InstallDate &gt;= (TODAY()-365)),
True, 
False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 365 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>last_med_message__c</fullName>
        <description>Last medical message received by Cardio Messenger device</description>
        <label>Last Med Message</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>last_movement_date__c</fullName>
        <label>Last Movement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>last_status__c</fullName>
        <description>Records the prior value of the Status when changed.  Used in automation.</description>
        <label>Last Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>lower_rate__c</fullName>
        <description>Programming parameter field for Device, example value is 70</description>
        <label>Lower Rate</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>